PA3/cool.output
Terminals unused in grammar

   ERROR


State 106 conflicts: 9 shift/reduce
State 132 conflicts: 9 shift/reduce
State 143 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    6 feature_list: features
    7             | %empty

    8 features: feature
    9         | features feature
   10         | error ';'

   11 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}' ';'
   12        | OBJECTID ':' TYPEID ';'
   13        | OBJECTID ':' TYPEID ASSIGN expr ';'

   14 formal_list: formal
   15            | formal_list ',' formal
   16            | %empty

   17 formal: OBJECTID ':' TYPEID

   18 expr: OBJECTID
   19     | OBJECTID ASSIGN expr
   20     | BOOL_CONST
   21     | INT_CONST
   22     | STR_CONST
   23     | expr '.' TYPEID '(' expr_param ')'
   24     | OBJECTID '(' expr_param ')'
   25     | expr '@' TYPEID '.' OBJECTID '(' expr_param ')'
   26     | IF expr THEN expr ELSE expr FI
   27     | WHILE expr LOOP expr POOL
   28     | '{' expr_block '}'
   29     | LET expr_let
   30     | CASE expr OF case_branches ESAC
   31     | NEW TYPEID
   32     | ISVOID expr
   33     | expr '+' expr
   34     | expr '-' expr
   35     | expr '*' expr
   36     | expr '/' expr
   37     | expr '<' expr
   38     | expr LE expr
   39     | expr '=' expr
   40     | '~' expr
   41     | NOT expr
   42     | '(' expr ')'

   43 expr_param: expr
   44           | expr_param ',' expr
   45           | %empty

   46 expr_block: expr ';'
   47           | expr_block expr ';'
   48           | error ';'

   49 expr_let: OBJECTID ':' TYPEID IN expr
   50         | OBJECTID ':' TYPEID ASSIGN expr IN expr
   51         | OBJECTID ':' TYPEID ',' expr_let
   52         | OBJECTID ':' TYPEID ASSIGN expr ',' expr_let
   53         | error IN expr
   54         | error ',' expr_let

   55 case_branches: case_branch
   56              | case_branches case_branch

   57 case_branch: OBJECTID ':' TYPEID DARROW expr ';'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 11 23 24 25 42
')' (41) 11 23 24 25 42
'*' (42) 35
'+' (43) 33
',' (44) 15 44 51 52 54
'-' (45) 34
'.' (46) 23 25
'/' (47) 36
':' (58) 11 12 13 17 49 50 51 52 57
';' (59) 4 5 10 11 12 13 46 47 48 57
'<' (60) 37
'=' (61) 39
'@' (64) 25
'{' (123) 4 5 11 28
'}' (125) 4 5 11 28
'~' (126) 40
error (256) 10 48 53 54
CLASS (258) 4 5
ELSE (259) 26
FI (260) 26
IF (261) 26
IN (262) 49 50 53
INHERITS (263) 5
LET (264) 29
LOOP (265) 27
POOL (266) 27
THEN (267) 26
WHILE (268) 27
CASE (269) 30
ESAC (270) 30
OF (271) 30
DARROW (272) 57
NEW (273) 31
ISVOID (274) 32
STR_CONST (275) 22
INT_CONST (276) 21
BOOL_CONST (277) 20
TYPEID (278) 4 5 11 12 13 17 23 25 31 49 50 51 52 57
OBJECTID (279) 11 12 13 17 18 19 24 25 49 50 51 52 57
ASSIGN (280) 13 19 50 52
NOT (281) 41
LE (282) 38
ERROR (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list (47)
    on left: 2 3, on right: 1 3
class (48)
    on left: 4 5, on right: 2 3
feature_list (49)
    on left: 6 7, on right: 4 5
features (50)
    on left: 8 9 10, on right: 6 9
feature (51)
    on left: 11 12 13, on right: 8 9
formal_list (52)
    on left: 14 15 16, on right: 11 15
formal (53)
    on left: 17, on right: 14 15
expr (54)
    on left: 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35
    36 37 38 39 40 41 42, on right: 11 13 19 23 25 26 27 30 32 33 34
    35 36 37 38 39 40 41 42 43 44 46 47 49 50 52 53 57
expr_param (55)
    on left: 43 44 45, on right: 23 24 25 44
expr_block (56)
    on left: 46 47 48, on right: 28 47
expr_let (57)
    on left: 49 50 51 52 53 54, on right: 29 51 52 54
case_branches (58)
    on left: 55 56, on right: 30 56
case_branch (59)
    on left: 57, on right: 55 56


State 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


State 1

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: class_list .
    3 class_list: class_list . class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 7


State 4

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 5

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 8
    '{'       shift, and go to state 9


State 6

    0 $accept: program $end .

    $default  accept


State 7

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 8

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 10


State 9

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 11
    OBJECTID  shift, and go to state 12

    '}'  reduce using rule 7 (feature_list)

    feature_list  go to state 13
    features      go to state 14
    feature       go to state 15


State 10

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 16


State 11

   10 features: error . ';'

    ';'  shift, and go to state 17


State 12

   11 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expr '}' ';'
   12        | OBJECTID . ':' TYPEID ';'
   13        | OBJECTID . ':' TYPEID ASSIGN expr ';'

    '('  shift, and go to state 18
    ':'  shift, and go to state 19


State 13

    4 class: CLASS TYPEID '{' feature_list . '}' ';'

    '}'  shift, and go to state 20


State 14

    6 feature_list: features .
    9 features: features . feature

    OBJECTID  shift, and go to state 12

    $default  reduce using rule 6 (feature_list)

    feature  go to state 21


State 15

    8 features: feature .

    $default  reduce using rule 8 (features)


State 16

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 11
    OBJECTID  shift, and go to state 12

    '}'  reduce using rule 7 (feature_list)

    feature_list  go to state 22
    features      go to state 14
    feature       go to state 15


State 17

   10 features: error ';' .

    $default  reduce using rule 10 (features)


State 18

   11 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expr '}' ';'

    OBJECTID  shift, and go to state 23

    $default  reduce using rule 16 (formal_list)

    formal_list  go to state 24
    formal       go to state 25


State 19

   12 feature: OBJECTID ':' . TYPEID ';'
   13        | OBJECTID ':' . TYPEID ASSIGN expr ';'

    TYPEID  shift, and go to state 26


State 20

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 27


State 21

    9 features: features feature .

    $default  reduce using rule 9 (features)


State 22

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'

    '}'  shift, and go to state 28


State 23

   17 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 29


State 24

   11 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expr '}' ';'
   15 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 30
    ','  shift, and go to state 31


State 25

   14 formal_list: formal .

    $default  reduce using rule 14 (formal_list)


State 26

   12 feature: OBJECTID ':' TYPEID . ';'
   13        | OBJECTID ':' TYPEID . ASSIGN expr ';'

    ASSIGN  shift, and go to state 32
    ';'     shift, and go to state 33


State 27

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 28

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 34


State 29

   17 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 35


State 30

   11 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expr '}' ';'

    ':'  shift, and go to state 36


State 31

   15 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 23

    formal  go to state 37


State 32

   13 feature: OBJECTID ':' TYPEID ASSIGN . expr ';'

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 52


State 33

   12 feature: OBJECTID ':' TYPEID ';' .

    $default  reduce using rule 12 (feature)


State 34

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 35

   17 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 17 (formal)


State 36

   11 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expr '}' ';'

    TYPEID  shift, and go to state 53


State 37

   15 formal_list: formal_list ',' formal .

    $default  reduce using rule 15 (formal_list)


State 38

   26 expr: IF . expr THEN expr ELSE expr FI

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 54


State 39

   29 expr: LET . expr_let

    error     shift, and go to state 55
    OBJECTID  shift, and go to state 56

    expr_let  go to state 57


State 40

   27 expr: WHILE . expr LOOP expr POOL

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 58


State 41

   30 expr: CASE . expr OF case_branches ESAC

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 59


State 42

   31 expr: NEW . TYPEID

    TYPEID  shift, and go to state 60


State 43

   32 expr: ISVOID . expr

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 61


State 44

   22 expr: STR_CONST .

    $default  reduce using rule 22 (expr)


State 45

   21 expr: INT_CONST .

    $default  reduce using rule 21 (expr)


State 46

   20 expr: BOOL_CONST .

    $default  reduce using rule 20 (expr)


State 47

   18 expr: OBJECTID .
   19     | OBJECTID . ASSIGN expr
   24     | OBJECTID . '(' expr_param ')'

    ASSIGN  shift, and go to state 62
    '('     shift, and go to state 63

    $default  reduce using rule 18 (expr)


State 48

   41 expr: NOT . expr

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 64


State 49

   40 expr: '~' . expr

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 65


State 50

   28 expr: '{' . expr_block '}'

    error       shift, and go to state 66
    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr        go to state 67
    expr_block  go to state 68


State 51

   42 expr: '(' . expr ')'

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 69


State 52

   13 feature: OBJECTID ':' TYPEID ASSIGN expr . ';'
   23 expr: expr . '.' TYPEID '(' expr_param ')'
   25     | expr . '@' TYPEID '.' OBJECTID '(' expr_param ')'
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   37     | expr . '<' expr
   38     | expr . LE expr
   39     | expr . '=' expr

    LE   shift, and go to state 70
    '<'  shift, and go to state 71
    '='  shift, and go to state 72
    '+'  shift, and go to state 73
    '-'  shift, and go to state 74
    '*'  shift, and go to state 75
    '/'  shift, and go to state 76
    '@'  shift, and go to state 77
    '.'  shift, and go to state 78
    ';'  shift, and go to state 79


State 53

   11 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expr '}' ';'

    '{'  shift, and go to state 80


State 54

   23 expr: expr . '.' TYPEID '(' expr_param ')'
   25     | expr . '@' TYPEID '.' OBJECTID '(' expr_param ')'
   26     | IF expr . THEN expr ELSE expr FI
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   37     | expr . '<' expr
   38     | expr . LE expr
   39     | expr . '=' expr

    THEN  shift, and go to state 81
    LE    shift, and go to state 70
    '<'   shift, and go to state 71
    '='   shift, and go to state 72
    '+'   shift, and go to state 73
    '-'   shift, and go to state 74
    '*'   shift, and go to state 75
    '/'   shift, and go to state 76
    '@'   shift, and go to state 77
    '.'   shift, and go to state 78


State 55

   53 expr_let: error . IN expr
   54         | error . ',' expr_let

    IN   shift, and go to state 82
    ','  shift, and go to state 83


State 56

   49 expr_let: OBJECTID . ':' TYPEID IN expr
   50         | OBJECTID . ':' TYPEID ASSIGN expr IN expr
   51         | OBJECTID . ':' TYPEID ',' expr_let
   52         | OBJECTID . ':' TYPEID ASSIGN expr ',' expr_let

    ':'  shift, and go to state 84


State 57

   29 expr: LET expr_let .

    $default  reduce using rule 29 (expr)


State 58

   23 expr: expr . '.' TYPEID '(' expr_param ')'
   25     | expr . '@' TYPEID '.' OBJECTID '(' expr_param ')'
   27     | WHILE expr . LOOP expr POOL
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   37     | expr . '<' expr
   38     | expr . LE expr
   39     | expr . '=' expr

    LOOP  shift, and go to state 85
    LE    shift, and go to state 70
    '<'   shift, and go to state 71
    '='   shift, and go to state 72
    '+'   shift, and go to state 73
    '-'   shift, and go to state 74
    '*'   shift, and go to state 75
    '/'   shift, and go to state 76
    '@'   shift, and go to state 77
    '.'   shift, and go to state 78


State 59

   23 expr: expr . '.' TYPEID '(' expr_param ')'
   25     | expr . '@' TYPEID '.' OBJECTID '(' expr_param ')'
   30     | CASE expr . OF case_branches ESAC
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   37     | expr . '<' expr
   38     | expr . LE expr
   39     | expr . '=' expr

    OF   shift, and go to state 86
    LE   shift, and go to state 70
    '<'  shift, and go to state 71
    '='  shift, and go to state 72
    '+'  shift, and go to state 73
    '-'  shift, and go to state 74
    '*'  shift, and go to state 75
    '/'  shift, and go to state 76
    '@'  shift, and go to state 77
    '.'  shift, and go to state 78


State 60

   31 expr: NEW TYPEID .

    $default  reduce using rule 31 (expr)


State 61

   23 expr: expr . '.' TYPEID '(' expr_param ')'
   25     | expr . '@' TYPEID '.' OBJECTID '(' expr_param ')'
   32     | ISVOID expr .
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   37     | expr . '<' expr
   38     | expr . LE expr
   39     | expr . '=' expr

    '@'  shift, and go to state 77
    '.'  shift, and go to state 78

    $default  reduce using rule 32 (expr)


State 62

   19 expr: OBJECTID ASSIGN . expr

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 87


State 63

   24 expr: OBJECTID '(' . expr_param ')'

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    $default  reduce using rule 45 (expr_param)

    expr        go to state 88
    expr_param  go to state 89


State 64

   23 expr: expr . '.' TYPEID '(' expr_param ')'
   25     | expr . '@' TYPEID '.' OBJECTID '(' expr_param ')'
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   37     | expr . '<' expr
   38     | expr . LE expr
   39     | expr . '=' expr
   41     | NOT expr .

    LE   shift, and go to state 70
    '<'  shift, and go to state 71
    '='  shift, and go to state 72
    '+'  shift, and go to state 73
    '-'  shift, and go to state 74
    '*'  shift, and go to state 75
    '/'  shift, and go to state 76
    '@'  shift, and go to state 77
    '.'  shift, and go to state 78

    $default  reduce using rule 41 (expr)


State 65

   23 expr: expr . '.' TYPEID '(' expr_param ')'
   25     | expr . '@' TYPEID '.' OBJECTID '(' expr_param ')'
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   37     | expr . '<' expr
   38     | expr . LE expr
   39     | expr . '=' expr
   40     | '~' expr .

    '@'  shift, and go to state 77
    '.'  shift, and go to state 78

    $default  reduce using rule 40 (expr)


State 66

   48 expr_block: error . ';'

    ';'  shift, and go to state 90


State 67
